--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ main {
 }
 
 h1 {
-  font-size: 3.2rem;
+  font-size: 3.1rem;
   font-weight: 800;
   margin-bottom: 1.5rem;
   text-align: center;
